hphp/hack/test/typecheck/const_visibility.php.exp
File "const_visibility.php", line 4, characters 3-9:
Constants cannot be declared `private` (Parsing[1002])
File "const_visibility.php", line 5, characters 3-9:
Constants cannot be declared `private` (Parsing[1002])
